--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <!--C-->
                 <div class="skill-card "> <!--Card-->
                     <div id="C" class="card-container flex-column align-items-center"> <!--inner Card-->
-                        <img class="p-3 mt-5" src="./assets/c.png" alt="C" width="144">
+                        <img class="p-3 mt-5" src="./assets/clang.png" alt="C" width="144">
                         <h2 class="p-3 bebas-fon" style="color: azure;">C</h2> 
                     <div class="container p-0 m-0 bar"> <!--Bar-->
                         <div class="skills c">50%</div>  
