--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </div>
             <div class="row row-cols-auto gx-5 justify-content-center ">
                 <div class="col">
-                        <a href="https://www.linkedin.com/in/erenxcolakx/">
+                        <a href="https://www.linkedin.com/in/erenncolak/">
                             <img src="./assets/linkedin.png" alt="linkedin" width="32" height="32">
                         </a>  
                 </div> 
