new skills and projects added

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <h2 class="bebas-font" style="color: azure;">Web Development</h2>
                 </div>   
                 <div class="container p-0 mt-2 bar"> <!--Bar-->
-                    <div class="skills web">20%</div>
+                    <div class="skills web">50%</div>
                 </div> 
                 <!--HTML-->
                 <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
@@ -156,6 +156,22 @@
                 </div>
                 <div class="container p-0 m-0 bar"> <!--Bar-->
                     <div class="framework skills css">70%</div>
+                </div>
+                <!-- JavaScript -->
+                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
+                    <img class="ms-2" src="./assets/js.png" alt="js" width="52" height="28">
+                    <h5 id="frameworks" class="m-3 fw-light">JavaScript</h5>
+                </div>
+                <div class="container p-0 m-0 bar"> <!--Bar-->
+                    <div class="framework skills js">50%</div>
+                </div>
+                <!-- Node - Express-->
+                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
+                    <img class="ms-2" src="./assets/node.png" alt="js" width="24" height="30">
+                    <h5 id="frameworks" class="m-3 fw-light">Node.js</h5>
+                </div>
+                <div class="container p-0 m-0 bar"> <!--Bar-->
+                    <div class="framework skills js">50%</div>
                 </div>
             </div>
             <!--Adobe-->
@@ -188,9 +204,9 @@
         <p class="center display-5 fw-bold pt-5 bebas-font" style="font-size: 4rem; color:white;">Projects</p>
         <p class="center fw-light open-sans-font" style="color: rgb(231, 231, 231);"> Click images to go to site.</p>
         <div class="container col-xxl-12 px-4 py-5 g-5">
-            <div class="row d-flex justify-content-lg-around justify-content-start flex-lg-row-reverse">
+            <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row-reverse">
               <div class="framehorizontal col-11 col-lg-6 ps-0">
-                <a href="https://erenxcolakx.github.io/HTML-CSS-Projects/WebDesignAgency_ResponsiveCSSProject/index.html">
+                <a href="https://erenxcolakx.github.io/HTML-CSS-JS-Projects/WebDesignAgency_ResponsiveCSSProject/index.html">
                     <img  src="./assets/devcom.png" class="d-block" alt="dev.com" height="300px">
                 </a>
             </div>
@@ -205,9 +221,9 @@
           </div>
 
           <div class="container col-xxl-12 px-4 py-5 g-5">
-            <div class="row d-flex justify-content-lg-around justify-content-start  flex-lg-row">
+            <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row">
               <div class="framevertical col-11 col-lg-5 ps-0">
-                <a href="https://erenxcolakx.github.io/HTML-CSS-Projects/Bootstrap%20Components%20Exercise/index.html">
+                <a href="https://erenxcolakx.github.io/HTML-CSS-JS-Projects/Bootstrap%20Components%20Exercise/index.html">
                     <img src="./assets/moveit.png" class="img-fluid" alt="Moveit">
                 </a>
               </div>
@@ -220,11 +236,11 @@
               </div>
             </div>
           </div>
-
+        <!--Tindog Bootstrap-->
           <div class="container col-xxl-12 px-4 py-5 g-5">
-            <div class="row d-flex justify-content-lg-around justify-content-start  flex-lg-row-reverse">
+            <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row-reverse">
               <div class="framevertical col-11  col-lg-6 ps-0">
-                <a href="https://erenxcolakx.github.io/HTML-CSS-Projects/TinDog%20Project/index.html">
+                <a href="https://erenxcolakx.github.io/HTML-CSS-JS-Projects/TinDog%20Project/index.html">
                     <img  src="./assets/tindog.png"  class="d-block mx-lg-auto img-fluid" alt="dev.com">
                 </a>
                 </div>
@@ -232,6 +248,39 @@
                 <h1 class="display-5 fw-bold lh-1 mb-3 bebas-font" style="color: white;">Tindog Bootstrap </h1>
                     <p class="lead open-sans-font" style="color: azure; font-size:1.5rem;">Bootstrap Exercise Project from Angela Yu's Web Dev Bootcamp. 
                         Bootstrap Snippets Used like Heroes - Features - Pricing - Footer etc.
+                    </p>
+              </div>
+            </div>
+          </div>
+          <!--Viryual Piano-->
+          <div class="container col-xxl-12 px-4 py-5 g-5">
+            <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row">
+              <div class="framevertical col-11 col-lg-5 ps-0">
+                <a href="https://erenxcolakx.github.io/HTML-CSS-JS-Projects/PianoSite/index.html">
+                    <img src="./assets/virtualpiano.png" class="img-fluid" alt="virtualpianosite">
+                </a>
+              </div>
+              <div class="col-lg-6 pt-4 ps-lg-3">
+                <h1 class="display-5 fw-bold lh-1 mb-3 bebas-font" style="color: white;">Virtual Piano </h1>
+                    <p class="lead open-sans-font" style="color: azure; font-size:1.5rem;"> 
+                    I used DOM to improve my skills and created a virtual piano.
+                    </p>
+              </div>
+            </div>
+          </div>
+          <!--LiWeatherApp-->
+          <div class="container col-xxl-12 px-4 py-5 g-5">
+            <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row-reverse">
+              <div class="col-11 col-lg-6 ps-0">
+                <a href="https://liweather.onrender.com">
+                    <img  src="./assets/liweather.gif"  class="rounded-4 d-block mx-lg-auto img-fluid" alt="weather app">
+                </a>
+                </div>
+              <div class="col-lg-5 pt-4">
+                <h1 class="display-5 fw-bold lh-1 mb-3 bebas-font" style="color: white;"> LiWeatherApp </h1>
+                    <p class="lead open-sans-font" style="color: azure; font-size:1.5rem;">Capstone Project of API Part from Angela Yu's Web Dev Bootcamp. 
+                        Node.js - Express.js - Axios - Bootstrap - JavaScript - Open-Meteo API were used.
+                        LiWeather app provide current and 14-day weather forecast by the given city name.
                     </p>
               </div>
             </div>
