--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row">
               <div class="framevertical col-11 col-lg-5 ps-0">
                 <a href="https://erenxcolakx.github.io/HTML-CSS-JS-Projects/PianoSite/index.html">
-                    <img src="./assets/virtualpiano.png" class="img-fluid" alt="virtualpianosite">
+                    <img src="./assets/virtualpiano.png" class="img-fluid" alt="Virtual Piano">
                 </a>
               </div>
               <div class="col-lg-6 pt-4 ps-lg-3">
