--- a/index.html
+++ b/index.html
@@ -252,18 +252,18 @@
               </div>
             </div>
           </div>
-          <!--Viryual Piano-->
+          <!--Virtual Piano-->
           <div class="container col-xxl-12 px-4 py-5 g-5">
             <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row">
               <div class="framevertical col-11 col-lg-5 ps-0">
                 <a href="https://erenxcolakx.github.io/HTML-CSS-JS-Projects/PianoSite/index.html">
-                    <img src="./assets/virtualpiano.png" class="img-fluid" alt="Virtual Piano">
+                    <img src="./assets/piano.png" class="img-fluid" alt="Virtual Piano">
                 </a>
               </div>
               <div class="col-lg-6 pt-4 ps-lg-3">
                 <h1 class="display-5 fw-bold lh-1 mb-3 bebas-font" style="color: white;">Virtual Piano </h1>
                     <p class="lead open-sans-font" style="color: azure; font-size:1.5rem;"> 
-                    I used DOM to improve my skills and created a virtual piano.
+                    I used DOM and Javascript to create a virtual piano.
                     </p>
               </div>
             </div>
@@ -273,7 +273,7 @@
             <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row-reverse">
               <div class="col-11 col-lg-6 ps-0">
                 <a href="https://liweather.onrender.com">
-                    <img  src="./assets/liweather.gif"  class="rounded-4 d-block mx-lg-auto img-fluid" alt="weather app">
+                    <img  src="./assets/tindog.png"  class="rounded-4 d-block mx-lg-auto img-fluid" alt="weather app">
                 </a>
                 </div>
               <div class="col-lg-5 pt-4">
