--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <div class="row d-flex justify-content-lg-around justify-content-start align-items-center flex-lg-row-reverse">
               <div class="col-11 col-lg-6 ps-0">
                 <a href="https://liweather.onrender.com">
-                    <img  src="./assets/tindog.png"  class="rounded-4 d-block mx-lg-auto img-fluid" alt="weather app">
+                    <img  src="./assets/weather.gif"  class="rounded-4 d-block mx-lg-auto img-fluid" alt="weather app">
                 </a>
                 </div>
               <div class="col-lg-5 pt-4">
