--- a/index.html
+++ b/index.html
@@ -30,18 +30,19 @@
             <img class="d-block mx-auto mb-4 rounded-circle" src="./assets/Me.jpg" alt="Eren Çolak" width="200" height="200">
             <p class="display-5 fw-bold mt-5 bebas-font" style="color:white; font-size:4rem; ">Who am I ?</p>
             <div class="col-lg-10 mx-auto">
-              <p class="lead my-5" style="color: rgb(255, 255, 255); font-family: 'Open Sans', sans-serif; font-size: 1.5rem">I was born in Bandırma district of Balıkesir in 2003. 
-                I have been using computers since I started primary school. 
+              <p class="lead my-5" style="color: rgb(255, 255, 255); font-family: 'Open Sans', sans-serif; font-size: 1.5rem">I was born in Bandırma district of Balıkesir in 2003.
+                I have been using computers since I started primary school.
                 I have been keen on astronomy since middle school also interested in photography & astrophotography.
-                I studied high school at Bandırma Anatolian High School. 
-                I have interested in Software Development since the summer before university. 
-                I have been studying at Marmara University since 2021 and I am developing myself in the field of 
-                <span style="color: rgb(135, 61, 255);">Web Development</span> and 
+                I studied high school at Bandırma Anatolian High School.
+                I have interested in Software Development since the summer before university.
+                I have been studying at Marmara University since 2021 and I am developing myself in the field of
+                <span style="color: rgb(135, 61, 255);">Web Development</span> and
                 <span style="color: rgb(135, 61, 255);">Data Science.</span>
             </p>
             </div>
         </div>
     </section>
+    <!--Education-->
     <section class="gradient-background">
         <div class="container px-4 py-5 " id="edu">
             <p class="center display-5 fw-bold bebas-font" style="font-size: 4rem; color:white;">Education</p>
@@ -58,7 +59,7 @@
                 <div class="d-flex align-items-center justify-content-center fs-4 ">
                   <img src="./assets/Marmara_Üniversitesi_logo.png" alt="Marmara University Logo" width="96">
                 </div>
-                <div class="center p-3"> 
+                <div class="center p-3">
                   <h3 class="fs-2" style="color: white;">Marmara University / Computer Engineering (2021 - ?)</h3>
                 </div>
               </div>
@@ -69,137 +70,72 @@
         <div class="d-flex justify-content-center px-4 py-5">
             <p class="center display-5 fw-bold bebas-font" style="font-size: 4rem; color:white;">Skills</p>
         </div>
-        <div class="container card-container row-gap-3 column-gap-3 pb-5 mb-5 "> <!--Card-BG-->
-            <div class="skill-card "> <!--Card-->
-                <div id="python" class="d-flex flex-column align-items-center"> <!--inner Card-->
-                    <img src="./assets/python.png" alt="python" width="144" class="p-2">
-                    <h2 class="p-2 bebas-font" style="color: azure;">Python</h2>
-                    <div class="container p-0 m-0 bar"> <!--Bar-->
-                        <div class="skills python">80%</div>
+        <div class="container mb-5">
+            <div class="d-flex flex-wrap gap-5 gap-lg-0 justify-content-evenly align-items-center">
+                    <div class="d-flex flex-column">
+                        <img src="./assets/python.png" alt="python" width="52px" height="52px">
+                        <p class="text-light mt-2">Python</p>
                     </div>
-                    <!--Numpy-->
-                    <div class="card-container align-items-center"> <!-- Image and Framework Name-->
-                        <img src="./assets/numpy.png" alt="numpy" width="24" height="24">
-                        <h5 id="frameworks" class="m-3 fw-light">Numpy</h5>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/numpy.png" class="mx-auto" alt="numpy" width="52px" height="52px">
+                        <p class="text-light mt-2">Numpy</p>
                     </div>
-                    <div class="container p-0 m-0 bar"> <!--Bar-->
-                        <div class="framework skills numpy">60%</div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/pandas.png" class="mx-auto" alt="pandas" width="42px" height="52px">
+                        <p class="text-light mt-2 text-center">Pandas</p>
                     </div>
-                    <!--Pandas-->    
-                    <div class="card-container align-items-center"> <!-- Image and Framework Name-->
-                        <img src="./assets/pandas.png" alt="Pandas" width="27" height="34">
-                        <h5 id="frameworks" class="m-3 fw-light">Pandas</h5>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/seaborn.png" class="mx-auto" alt="seaborn" width="52px" height="52px">
+                        <p class="text-light mt-2 text-center">Seaborn</p>
                     </div>
-                    <div class="container p-0 m-0 bar"> <!--Bar-->
-                        <div class="framework skills pandas">65%</div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/matplot.png" class="mx-auto" alt="matplot" width="52px" height="52px">
+                        <p class="text-light mt-2 text-center">Matplot</p>
                     </div>
-                    <!--Seaborn-->
-                    <div class="card-container align-items-center"> <!-- Image and Framework Name-->
-                        <img class="ms-2" src="./assets/seaborn.png" alt="Seaborn" width="24" height="24">
-                        <h5 id="frameworks" class="m-3 fw-light">Seaborn</h5>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/clang.png" class="mx-auto" alt="c" width="46px" height="52px">
+                        <p class="text-light mt-2 text-center">C</p>
                     </div>
-                    <div class="container p-0 m-0 bar"> <!--Bar-->
-                        <div class="framework skills seaborn">65%</div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/java.png" class="mx-auto" alt="java" width="42px" height="52px">
+                        <p class="text-light mt-2 text-center">Java</p>
                     </div>
-                    <!--Matplotlib-->
-                    <div class="card-container align-items-center"> <!-- Image and Framework Name-->
-                        <img class="ms-4" src="./assets/matplot.png" alt="matplotlib" width="24" height="24">
-                        <h5 id="frameworks" class="m-3 fw-light">Matplotlib</h5>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/js.png" class="mx-auto" alt="javascript" width="52px" height="52px">
+                        <p class="text-light mt-2 text-center">Javascript</p>
                     </div>
-                    <div class="container p-0 m-0 bar"> <!--Bar-->
-                        <div class="framework skills matplotlib">70%</div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/html.png" class="mx-auto" alt="html5" width="52px" height="52px">
+                        <p class="text-light mt-2 text-center">HTML5</p>
                     </div>
-                </div>    
-            </div>
-            <div class="skill-card row-gap-5"> <!--Card-->
-                <!--Java-->
-                <div id="java" class="card-container flex-column align-items-center"> <!--inner Card-->
-                    <img class="p-2 -mt-3"src="./assets/java.png" alt="java" width="110">
-                    <h2 class="p-2 bebas-font" style="color: azure;">Java</h2>
-                    <div class="container p-0 m-0 bar"> <!--Bar-->
-                        <div class="skills java">80%</div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/css.png" class="mx-auto" alt="css3" width="36px" height="50px">
+                        <p class="text-light mt-2 text-center">CSS3</p>
                     </div>
-                </div>    
-                <!--C-->
-                <div class="skill-card "> <!--Card-->
-                    <div id="C" class="card-container flex-column align-items-center"> <!--inner Card-->
-                        <img class="p-3 mt-5" src="./assets/clang.png" alt="C" width="144">
-                        <h2 class="p-3 bebas-fon" style="color: azure;">C</h2> 
-                    <div class="container p-0 m-0 bar"> <!--Bar-->
-                        <div class="skills c">50%</div>  
+                    <div class="d-flex flex-column">
+                        <img src="./assets/bootstrap.png"  class="mx-auto" alt="bootstrap" width="62px" height="52px">
+                        <p class="text-light mt-2 text-center">Bootstrap</p>
                     </div>
-                    </div>    
-                </div>
-            </div>
-            <div class="skill-card "> <!--Card-->
-                <div id="web" class="d-flex flex-column align-items-center"> <!--inner Card-->
-                    <p class="p-2" style="color:white;font-size: 80px; border-radius: 50px;">< / ></p>
-                    <h2 class="bebas-font" style="color: azure;">Web Development</h2>
-                </div>   
-                <div class="container p-0 mt-2 bar"> <!--Bar-->
-                    <div class="skills web">50%</div>
-                </div> 
-                <!--HTML-->
-                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
-                    <img class="ms-2" src="./assets/html.png" alt="HTML5" width="32" height="32">
-                    <h5 id="frameworks" class="m-3 fw-light">HTML5</h5>
-                </div>
-                <div class="container p-0 m-0 bar"> <!--Bar--> 
-                    <div class="framework skills html">70%</div>
-                </div>
-                <!--CSS-->
-                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
-                    <img class="ms-2" src="./assets/css.png" alt="css" width="22" height="30">
-                    <h5 id="frameworks" class="m-3 fw-light">CSS</h5>
-                    <img class="ms-2" src="./assets/bootstrap.png" alt="matplotlib" width="28" height="24">
-                    <h5 id="frameworks" class="m-3 fw-light">Bootstrap</h5> 
-                </div>
-                <div class="container p-0 m-0 bar"> <!--Bar-->
-                    <div class="framework skills css">70%</div>
-                </div>
-                <!-- JavaScript -->
-                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
-                    <img class="ms-2" src="./assets/js.png" alt="js" width="52" height="28">
-                    <h5 id="frameworks" class="m-3 fw-light">JavaScript</h5>
-                </div>
-                <div class="container p-0 m-0 bar"> <!--Bar-->
-                    <div class="framework skills js">50%</div>
-                </div>
-                <!-- Node - Express-->
-                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
-                    <img class="ms-2" src="./assets/node.png" alt="js" width="24" height="30">
-                    <h5 id="frameworks" class="m-3 fw-light">Node.js</h5>
-                </div>
-                <div class="container p-0 m-0 bar"> <!--Bar-->
-                    <div class="framework skills js">50%</div>
-                </div>
-            </div>
-            <!--Adobe-->
-            <div class="skill-card "> <!--Card-->
-                <div id="adobe" class="d-flex flex-column align-items-center"> <!--inner Card-->
-                    <img src="./assets/Adobe.png" alt="Adobe" width="126" class="mt-3">
-                    <h2 class="bebas-font mt-2" style="color: azure;">Adobe</h2>
-                </div>   
-                <!--Illustrator-->
-                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
-                    <img class=" mb-2" src="./assets/illustrator.png" alt="Illustrator" width="24" height="24">
-                    <h5 id="frameworks" class="ms-3 fw-light">Illustrator</h5>
-                </div>
-                <div class="container p-0 m-0 bar"> <!--Bar--> 
-                    <div class="framework skills illustrator">70%</div>
-                </div>
-                <!--Photoshop-->
-                <div class="card-container align-items-center justify-content-center"> <!-- Image and Framework Name-->
-                    <img class="ms-3" src="./assets/photoshop.png" alt="photoshop" width="24" height="24">
-                    <h5 id="frameworks" class="ms-3 mt-3 pb-1 fw-light">Photoshop</h5>
-                </div>
-                <div class="container p-0 bar"> <!--Bar-->
-                    <div class="framework skills photoshop">50%</div>
-                </div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/jquery.png" class="mx-auto" alt="jquery" width="52px" height="52px">
+                        <p class="text-light mt-2 text-center">jQuery</p>
+                    </div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/node.png" class="mx-auto" alt="node.js" width="46px" height="52px">
+                        <p class="text-light mt-2 text-center">Node.js</p>
+                    </div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/express.png" class="mx-auto" alt="express.js" width="52px" height="52px">
+                        <p class="text-light mt-2 text-center">Express.js</p>
+                    </div>
+                    <div class="d-flex flex-column">
+                        <img src="./assets/postgresql.png" class="mx-auto" alt="postgresql" width="52px" height="52px">
+                        <p class="text-light mt-2 text-center">PostgreSQL</p>
+                    </div>
             </div>
         </div>
     </section>
-    
+
     <section id="Projects" class="gradient-background">
         <p class="center display-5 fw-bold pt-5 bebas-font" style="font-size: 4rem; color:white;">Projects</p>
         <p class="center fw-light open-sans-font" style="color: rgb(231, 231, 231);"> Click images to go to site.</p>
