--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="8BFaYSKbfsrXNxUSQ3EhJ121_769QsMIl6HKchBaKSk" />
     <link rel="icon" href="./src/images/favicon.png"/>
     <title>Eren Çolak</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
